[gd_scene load_steps=5 format=2]

[ext_resource path="res://CellEditor.gd" type="Script" id=1]
[ext_resource path="res://Cell.tscn" type="PackedScene" id=2]
[ext_resource path="res://gui/CellSettings.tscn" type="PackedScene" id=3]

[sub_resource type="Environment" id=1]
ambient_light_color = Color( 0.580392, 0.580392, 0.580392, 1 )

[node name="CellEditor" type="Spatial"]
script = ExtResource( 1 )

[node name="Cell" parent="." instance=ExtResource( 2 )]

[node name="CellSettings" parent="." instance=ExtResource( 3 )]

[node name="DirectionalLight" type="DirectionalLight" parent="."]
transform = Transform( 0.896703, -0.0753708, 0.436169, 0, 0.985396, 0.170278, -0.442633, -0.152689, 0.883607, 3.77258, 0, 0.494787 )
light_energy = 0.64

[node name="Pivot" type="Spatial" parent="."]
transform = Transform( 1, 0, 0, 0, 0.809017, 0.587785, 0, -0.587785, 0.809017, 0, 0, 0 )

[node name="Camera" type="Camera" parent="Pivot"]
transform = Transform( 1, 0, 0, 0, 1, 0, 0, 0, 1, 0, 0, 4 )
current = true

[node name="WorldEnvironment" type="WorldEnvironment" parent="."]
environment = SubResource( 1 )
[connection signal="face_changed" from="CellSettings" to="." method="_on_face_changed"]
[connection signal="ok_button_pressed" from="CellSettings" to="." method="_on_ok_button_pressed"]
[connection signal="spin_button_toggled" from="CellSettings" to="." method="_on_spin_button_toggled"]
[connection signal="up_down_button_toggled" from="CellSettings" to="." method="_on_up_down_button_toggled"]
[connection signal="zoom_changed" from="CellSettings" to="." method="_on_zoom_changed"]
